--- a/glotrix/tsconfig.json
+++ b/glotrix/tsconfig.json
@@ -19,7 +19,9 @@
       "@glotrix/core": ["libs/core/src/index.ts"],
       "@glotrix/ui/navigation": ["libs/ui/navigation/src/index.ts"],
       "@glotrix/ui/avatar": ["libs/ui/avatar/src/index.ts"],
-      "@glotrix/ui/forms": ["libs/ui/forms/src/index.ts"]
+      "@glotrix/ui/forms": ["libs/ui/forms/src/index.ts"],
+      "@glotrix/ui/tables": ["libs/ui/tables/src/index.ts"],
+      "@glotrix/ui/search-bar": ["libs/ui/search-bar/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
