--- a/glotrix/package.json
+++ b/glotrix/package.json
@@ -25,48 +25,52 @@
     "update:check": "ng update",
     "workspace-schematic": "nx workspace-schematic",
     "dep-graph": "nx dep-graph",
-    "help": "nx help"
+    "help": "nx help",
+    "analyze-cms": "webpack-bundle-analyzer dist/apps/cms/stats-es2015.json"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^8.0.0",
-    "@angular/common": "^8.0.0",
-    "@angular/compiler": "^8.0.0",
-    "@angular/core": "^8.0.0",
-    "@angular/forms": "^8.0.0",
-    "@angular/platform-browser": "^8.0.0",
-    "@angular/platform-browser-dynamic": "^8.0.0",
-    "@angular/router": "^8.0.0",
-    "@ng-bootstrap/ng-bootstrap": "^5.1.0",
-    "@nrwl/angular": "8.4.12",
+    "@angular/animations": "^8.2.5",
+    "@angular/common": "^8.2.5",
+    "@angular/compiler": "^8.2.5",
+    "@angular/core": "^8.2.5",
+    "@angular/forms": "^8.2.5",
+    "@angular/platform-browser": "^8.2.5",
+    "@angular/platform-browser-dynamic": "^8.2.5",
+    "@angular/router": "^8.2.5",
+    "@nrwl/angular": "8.4.13",
     "angular-font-awesome": "^3.1.2",
+    "chart.js": "^2.8.0",
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
+    "lodash.startcase": "^4.4.0",
     "rxjs": "~6.4.0",
     "zone.js": "^0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.800.1",
-    "@angular/cli": "8.1.1",
-    "@angular/compiler-cli": "^8.0.0",
-    "@angular/language-service": "^8.0.0",
-    "@nrwl/cypress": "8.4.12",
-    "@nrwl/jest": "8.4.12",
-    "@nrwl/workspace": "8.4.12",
-    "@types/jest": "24.0.9",
-    "@types/node": "~8.9.4",
+    "@angular-devkit/build-angular": "^0.803.3",
+    "@angular/cli": "8.3.3",
+    "@angular/compiler-cli": "^8.2.5",
+    "@angular/language-service": "^8.2.5",
+    "@nrwl/cypress": "8.4.13",
+    "@nrwl/jest": "8.4.13",
+    "@nrwl/workspace": "8.4.13",
+    "@types/chart.js": "^2.8.4",
+    "@types/jest": "24.0.18",
+    "@types/node": "~12.7.4",
     "bootstrap": "^4.3.1",
-    "codelyzer": "~5.0.1",
+    "codelyzer": "~5.1.0",
     "cypress": "3.4.1",
     "dotenv": "6.2.0",
-    "eslint": "6.1.0",
-    "jest": "24.1.0",
-    "jest-preset-angular": "7.0.0",
-    "prettier": "1.16.4",
+    "eslint": "6.3.0",
+    "jest": "24.9.0",
+    "jest-preset-angular": "7.1.1",
+    "prettier": "1.18.2",
     "sass-loader": "^7.3.1",
-    "ts-jest": "24.0.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~5.11.0",
-    "typescript": "~3.4.5"
+    "ts-jest": "24.0.2",
+    "ts-node": "~8.3.0",
+    "tslint": "~5.19.0",
+    "typescript": "~3.4.5",
+    "webpack-bundle-analyzer": "^3.4.1"
   }
 }
