--- a/glotrix/angular.json
+++ b/glotrix/angular.json
@@ -21,7 +21,10 @@
             "polyfills": "apps/cms/src/polyfills.ts",
             "tsConfig": "apps/cms/tsconfig.app.json",
             "aot": false,
-            "assets": ["apps/cms/src/favicon.ico", "apps/cms/src/assets"],
+            "assets": [
+              "apps/cms/src/favicon.ico",
+              "apps/cms/src/assets"
+            ],
             "styles": [
               "apps/cms/src/styles.scss",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
@@ -80,7 +83,10 @@
               "apps/cms/tsconfig.app.json",
               "apps/cms/tsconfig.spec.json"
             ],
-            "exclude": ["**/node_modules/**", "!apps/cms/**"]
+            "exclude": [
+              "**/node_modules/**",
+              "!apps/cms/**"
+            ]
           }
         },
         "test": {
@@ -114,8 +120,13 @@
         "lint": {
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
-            "tsConfig": ["apps/cms-e2e/tsconfig.e2e.json"],
-            "exclude": ["**/node_modules/**", "!apps/cms-e2e/**"]
+            "tsConfig": [
+              "apps/cms-e2e/tsconfig.e2e.json"
+            ],
+            "exclude": [
+              "**/node_modules/**",
+              "!apps/cms-e2e/**"
+            ]
           }
         }
       }
@@ -140,7 +151,10 @@
             "polyfills": "apps/store/src/polyfills.ts",
             "tsConfig": "apps/store/tsconfig.app.json",
             "aot": false,
-            "assets": ["apps/store/src/favicon.ico", "apps/store/src/assets"],
+            "assets": [
+              "apps/store/src/favicon.ico",
+              "apps/store/src/assets"
+            ],
             "styles": [
               "apps/store/src/styles.scss",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
@@ -199,7 +213,10 @@
               "apps/store/tsconfig.app.json",
               "apps/store/tsconfig.spec.json"
             ],
-            "exclude": ["**/node_modules/**", "!apps/store/**"]
+            "exclude": [
+              "**/node_modules/**",
+              "!apps/store/**"
+            ]
           }
         },
         "test": {
@@ -233,8 +250,13 @@
         "lint": {
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
-            "tsConfig": ["apps/store-e2e/tsconfig.e2e.json"],
-            "exclude": ["**/node_modules/**", "!apps/store-e2e/**"]
+            "tsConfig": [
+              "apps/store-e2e/tsconfig.e2e.json"
+            ],
+            "exclude": [
+              "**/node_modules/**",
+              "!apps/store-e2e/**"
+            ]
           }
         }
       }
@@ -252,7 +274,10 @@
               "libs/core/tsconfig.lib.json",
               "libs/core/tsconfig.spec.json"
             ],
-            "exclude": ["**/node_modules/**", "!libs/core/**"]
+            "exclude": [
+              "**/node_modules/**",
+              "!libs/core/**"
+            ]
           }
         },
         "test": {
@@ -283,7 +308,10 @@
               "libs/ui/navigation/tsconfig.lib.json",
               "libs/ui/navigation/tsconfig.spec.json"
             ],
-            "exclude": ["**/node_modules/**", "!libs/ui/navigation/**"]
+            "exclude": [
+              "**/node_modules/**",
+              "!libs/ui/navigation/**"
+            ]
           }
         },
         "test": {
@@ -314,7 +342,10 @@
               "libs/ui/avatar/tsconfig.lib.json",
               "libs/ui/avatar/tsconfig.spec.json"
             ],
-            "exclude": ["**/node_modules/**", "!libs/ui/avatar/**"]
+            "exclude": [
+              "**/node_modules/**",
+              "!libs/ui/avatar/**"
+            ]
           }
         },
         "test": {
@@ -345,7 +376,10 @@
               "libs/ui/forms/tsconfig.lib.json",
               "libs/ui/forms/tsconfig.spec.json"
             ],
-            "exclude": ["**/node_modules/**", "!libs/ui/forms/**"]
+            "exclude": [
+              "**/node_modules/**",
+              "!libs/ui/forms/**"
+            ]
           }
         },
         "test": {
@@ -363,33 +397,6 @@
         }
       }
     },
-    "tables": {
-      "projectType": "library",
-      "root": "libs/tables",
-      "sourceRoot": "libs/tables/src",
-      "prefix": "gt",
-      "architect": {
-        "lint": {
-          "builder": "@angular-devkit/build-angular:tslint",
-          "options": {
-            "tsConfig": [
-              "libs/tables/tsconfig.lib.json",
-              "libs/tables/tsconfig.spec.json"
-            ],
-            "exclude": ["**/node_modules/**", "!libs/tables/**"]
-          }
-        },
-        "test": {
-          "builder": "@nrwl/jest:jest",
-          "options": {
-            "jestConfig": "libs/tables/jest.config.js",
-            "tsConfig": "libs/tables/tsconfig.spec.json",
-            "setupFile": "libs/tables/src/test-setup.ts"
-          }
-        }
-      },
-      "schematics": {}
-    },
     "ui-tables": {
       "projectType": "library",
       "root": "libs/ui/tables",
@@ -403,7 +410,10 @@
               "libs/ui/tables/tsconfig.lib.json",
               "libs/ui/tables/tsconfig.spec.json"
             ],
-            "exclude": ["**/node_modules/**", "!libs/ui/tables/**"]
+            "exclude": [
+              "**/node_modules/**",
+              "!libs/ui/tables/**"
+            ]
           }
         },
         "test": {
@@ -430,7 +440,10 @@
               "libs/ui/search-bar/tsconfig.lib.json",
               "libs/ui/search-bar/tsconfig.spec.json"
             ],
-            "exclude": ["**/node_modules/**", "!libs/ui/search-bar/**"]
+            "exclude": [
+              "**/node_modules/**",
+              "!libs/ui/search-bar/**"
+            ]
           }
         },
         "test": {
@@ -439,6 +452,40 @@
             "jestConfig": "libs/ui/search-bar/jest.config.js",
             "tsConfig": "libs/ui/search-bar/tsconfig.spec.json",
             "setupFile": "libs/ui/search-bar/src/test-setup.ts"
+          }
+        }
+      },
+      "schematics": {
+        "@nrwl/angular:component": {
+          "styleext": "scss"
+        }
+      }
+    },
+    "ui-carousel": {
+      "projectType": "library",
+      "root": "libs/ui/carousel",
+      "sourceRoot": "libs/ui/carousel/src",
+      "prefix": "glotrix",
+      "architect": {
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "libs/ui/carousel/tsconfig.lib.json",
+              "libs/ui/carousel/tsconfig.spec.json"
+            ],
+            "exclude": [
+              "**/node_modules/**",
+              "!libs/ui/carousel/**"
+            ]
+          }
+        },
+        "test": {
+          "builder": "@nrwl/jest:jest",
+          "options": {
+            "jestConfig": "libs/ui/carousel/jest.config.js",
+            "tsConfig": "libs/ui/carousel/tsconfig.spec.json",
+            "setupFile": "libs/ui/carousel/src/test-setup.ts"
           }
         }
       },
