--- a/glotrix/nx.json
+++ b/glotrix/nx.json
@@ -24,34 +24,25 @@
       "tags": []
     },
     "ui-navigation": {
-      "tags": [
-        "ui"
-      ]
+      "tags": ["ui"]
     },
     "ui-avatar": {
-      "tags": [
-        "ui"
-      ]
+      "tags": ["ui"]
     },
     "ui-forms": {
-      "tags": [
-        "ui"
-      ]
+      "tags": ["ui"]
     },
     "ui-tables": {
-      "tags": [
-        "ui"
-      ]
+      "tags": ["ui"]
     },
     "ui-search-bar": {
-      "tags": [
-        "ui"
-      ]
+      "tags": ["ui"]
     },
     "ui-carousel": {
-      "tags": [
-        "ui"
-      ]
+      "tags": ["ui"]
+    },
+    "models": {
+      "tags": ["models"]
     }
   }
 }
