--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
   "editor.autoIndent": true,
   "editor.codeActionsOnSave": {
-    "source.organizeImports": true
+    // "source.organizeImports": true
   },
   "editor.cursorBlinking": "solid",
   "editor.cursorSmoothCaretAnimation": true,
