adding login ui components

--- a/glotrix/angular.json
+++ b/glotrix/angular.json
@@ -562,6 +562,33 @@
           }
         }
       }
+    },
+    "ui-login": {
+      "projectType": "library",
+      "root": "libs/ui/login",
+      "sourceRoot": "libs/ui/login/src",
+      "prefix": "gt",
+      "architect": {
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "libs/ui/login/tsconfig.lib.json",
+              "libs/ui/login/tsconfig.spec.json"
+            ],
+            "exclude": ["**/node_modules/**", "!libs/ui/login/**"]
+          }
+        },
+        "test": {
+          "builder": "@nrwl/jest:jest",
+          "options": {
+            "jestConfig": "libs/ui/login/jest.config.js",
+            "tsConfig": "libs/ui/login/tsconfig.spec.json",
+            "setupFile": "libs/ui/login/src/test-setup.ts"
+          }
+        }
+      },
+      "schematics": {}
     }
   },
   "cli": {
