adding test files and test for avatar

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,7 +28,8 @@
       "@glotrix/ui/image-preview": ["libs/ui/image-preview/src/index.ts"],
       "@glotrix/ui/images-upload": ["libs/ui/images-upload/src/index.ts"],
       "@glotrix/ui/login": ["libs/ui/login/src/index.ts"],
-      "@glotrix/ui/counter": ["libs/ui/counter/src/index.ts"]
+      "@glotrix/ui/counter": ["libs/ui/counter/src/index.ts"],
+      "@glotrix/ui/clau": ["libs/ui/clau/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
