--- a/.github/workflows/cms.yml
+++ b/.github/workflows/cms.yml
@@ -20,7 +20,7 @@ jobs:
     - name: npm install, build, and test
       run: |
         npm install
-        ng test cms
-        ng build cms
+        npm run ng test cms
+        npm run ng build cms
       env:
         CI: true
