--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,30 +1,31 @@
 {
-  "editor.autoIndent": true,
-  "editor.codeActionsOnSave": {
-    // "source.organizeImports": true
-  },
-  "editor.cursorBlinking": "solid",
-  "editor.cursorSmoothCaretAnimation": true,
-  "editor.cursorStyle": "line",
-  "editor.fontLigatures": true,
-  "editor.formatOnPaste": true,
-  "editor.formatOnType": false,
-  "editor.formatOnSave": true,
-  "editor.letterSpacing": 0.5,
-  "editor.lineHeight": 20,
-  "editor.renderWhitespace": "none",
-  "editor.tabCompletion": "on",
-  "editor.tabSize": 2,
-  "editor.wordWrap": "off",
-  "files.exclude": {
-    "**/.git": true,
-    "**/.DS_Store": true,
-    "**/*.js": {
-      "when": "$(basename).ts"
-    },
-    "**/*.js.map": {
-      "when": "$(basename)"
-    }
-  },
-  "files.trimTrailingWhitespace": true
+	"editor.autoIndent": true,
+	"editor.codeActionsOnSave": {
+		// "source.organizeImports": true
+	},
+	"editor.cursorBlinking": "solid",
+	"editor.cursorSmoothCaretAnimation": true,
+	"editor.cursorStyle": "line",
+	"editor.fontLigatures": true,
+	"editor.formatOnPaste": true,
+	"editor.formatOnType": false,
+	"editor.formatOnSave": true,
+	"editor.letterSpacing": 0.5,
+	"editor.lineHeight": 20,
+	"editor.renderWhitespace": "none",
+	"editor.tabCompletion": "on",
+	"editor.tabSize": 2,
+	"editor.wordWrap": "off",
+	"files.exclude": {
+		"**/.git": true,
+		"**/.DS_Store": true,
+		"**/*.js": {
+			"when": "$(basename).ts"
+		},
+		"**/*.js.map": {
+			"when": "$(basename)"
+		}
+	},
+	"files.trimTrailingWhitespace": true,
+	"jest.debugMode": true
 }
