--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,7 +29,8 @@
       "@glotrix/ui/images-upload": ["libs/ui/images-upload/src/index.ts"],
       "@glotrix/ui/login": ["libs/ui/login/src/index.ts"],
       "@glotrix/ui/counter": ["libs/ui/counter/src/index.ts"],
-      "@glotrix/ui/clau": ["libs/ui/clau/src/index.ts"]
+      "@glotrix/ui/clau": ["libs/ui/clau/src/index.ts"],
+      "@glotrix/ui/card": ["libs/ui/card/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
