--- a/package.json
+++ b/package.json
@@ -37,10 +37,12 @@
     "@angular/common": "^8.2.5",
     "@angular/compiler": "^8.2.5",
     "@angular/core": "^8.2.5",
+    "@angular/fire": "^5.2.1",
     "@angular/forms": "^8.2.5",
     "@angular/platform-browser": "^8.2.5",
     "@angular/platform-browser-dynamic": "^8.2.5",
     "@angular/router": "^8.2.5",
+    "@ngrx/effects": "^8.3.0",
     "@ngrx/entity": "^8.3.0",
     "@ngrx/router-store": "^8.3.0",
     "@ngrx/store": "^8.3.0",
@@ -49,6 +51,7 @@
     "angular-font-awesome": "^3.1.2",
     "chart.js": "^2.8.0",
     "core-js": "^2.5.4",
+    "firebase": "^7.0.0",
     "font-awesome": "^4.7.0",
     "lodash.startcase": "^4.4.0",
     "rxjs": "~6.4.0",
