--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,7 +30,8 @@
       "@glotrix/ui/login": ["libs/ui/login/src/index.ts"],
       "@glotrix/ui/counter": ["libs/ui/counter/src/index.ts"],
       "@glotrix/ui/clau": ["libs/ui/clau/src/index.ts"],
-      "@glotrix/ui/card": ["libs/ui/card/src/index.ts"]
+      "@glotrix/ui/card": ["libs/ui/card/src/index.ts"],
+      "@glotrix/ui/spinner": ["libs/ui/spinner/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
